--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ArenaBattle
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Book/Maps/Step3.Step3
-GameDefaultMap=/Game/Book/Maps/Step3.Step3
+EditorStartupMap=/Game/Step4.Step4
+GameDefaultMap=/Game/Step4.Step4
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -243,4 +243,7 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
 
