Add CH14 ABGameState

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=ArenaBattle
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Step4.Step4
-GameDefaultMap=/Game/Step4.Step4
+EditorStartupMap=/Game/Gameplay.Gameplay
+GameDefaultMap=/Game/Gameplay.Gameplay
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
